# Old-Starter-Templates

./: .gitignore  .replit  README.md  replit.nix
gradle-lib/: README.md  settings.gradle
gradle-lib/lib/: build.gradle
gradle-lib/lib/src/main/java/io/github/bd103/template/: Library.java
lib/: build.gradle
python-nix-pkg/: .replit  pyproject.toml  replit.nix
